deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Batch__c/Outreach_Batch__c.object-meta.xml
<CustomObject>
    <label>Outreach Batch</label>
    <pluralLabel>Outreach Batches</pluralLabel>
    <nameField>
        <label>Batch Number</label>
        <type>AutoNumber</type>
        <displayFormat>OB-{00000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One record per rep selecting properties and confirming. The owner of this record is the rep whose mailbox sends it.</description>
</CustomObject>