deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Batch__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <label>Attachment Name</label>
    <description>The exact file the body of this batch promised, recorded so the drafting step attaches that file rather than one it guessed. Blank means the template promised nothing.</description>
    <inlineHelpText>Set automatically from the template at confirm time. Do not edit.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>