deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Batch__c/fields/Confirmed_At__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_At__c</fullName>
    <label>Confirmed At</label>
    <type>DateTime</type>
    <description>When the rep confirmed and the rendered bodies were frozen.</description>
</CustomField>