deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Batch__c/fields/Meeting_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Day_1__c</fullName>
    <label>Meeting Day 1</label>
    <type>Text</type>
    <length>12</length>
    <description>Frozen at confirm. The copy asks "20 minutes [day] or [day]" and the days are computed from the run date. A batch draining over two days would otherwise offer days that have already passed.</description>
</CustomField>