deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Batch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Drafting and Releasing are in flight states. A batch stuck in either is an exception for a human, never something automation retries.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Confirmed</fullName><default>false</default><label>Confirmed</label></value>
            <value><fullName>Drafting</fullName><default>false</default><label>Drafting</label></value>
            <value><fullName>Drafted</fullName><default>false</default><label>Drafted</label></value>
            <value><fullName>Releasing</fullName><default>false</default><label>Releasing</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>