deploys/2026-08-25-mdu-outreach-foundation/force-app/main/default/objects/Outreach_Batch__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <type>Text</type>
    <length>255</length>
    <description>DeveloperName of the EmailTemplate this batch rendered from, so response rates can later be attributed to a wording.</description>
</CustomField>